# streama

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: Shell.cpp  Shell.h  Statement.cpp  Statement.h
src/Commands/: ExecutionEngine.cpp  ExecutionEngine.h
src/Compiler/: Lexer.cpp  Lexer.h
src/Persistance/: DbContext.cpp  DbContext.h
src/Plugins/Kubernetes/: Porting.cpp  Porting.h
src/UI/: App.cpp  App.h  MainScreen.cpp  MainScreen.h
src/UI/Components/: Button.cpp  Button.h  Command.cpp  Command.h  Component.cpp  Component.h  Input.cpp  Input.h  Output.cpp  Output.h  Scrollable.cpp  Scrollable.h  Text.cpp  Text.h  TextList.cpp  TextList.h
src/UI/Graphics/: View.cpp  View.h
src/UI/Utils/: InputUtils.cpp  InputUtils.h
tests/: InputUtils_Tests.cpp
